--- a/webactual/about.html
+++ b/webactual/about.html
@@ -35,11 +35,11 @@
         <div class="navbar-collapse collapse">
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation"><a href="index.html">Home</a></li>
-              <li role="presentation"><a href="about.html" class="active">About Us</a></li>
-              <li role="presentation"><a href="services.html">Services</a></li>
-              <li role="presentation"><a href="gallery.html">Gallery</a></li>
-              <li role="presentation"><a href="contact.html">Contact</a></li>
+              <li role="presentation"><a href="index.html" class="active">HOME</a></li>
+              <li role="presentation"><a href="about.html">SERVICIOS Y BENEFICIOS</a></li>
+              <li role="presentation"><a href="services.html">PRODUCTOS</a></li>
+              <li role="presentation"><a href="gallery.html">CONTACTO</a></li>
+              <li role="presentation"><a href="contact.html">UBICACION</a></li>
             </ul>
           </div>
         </div>
@@ -328,7 +328,7 @@
         <div class="copyright">
           &copy; SystemDNS Theme. All Rights Reserved.
           <div class="credits">
-          
+
             <a href="http://www.servitecflhuaraz.com/">SystemDNS</a> by <a href="http://www.servitecflhuaraz.com/">SystemDNS</a>
           </div>
         </div>
