--- a/webactual/servicios y beneficios.html
+++ b/webactual/servicios y beneficios.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" href="img/favicon.ico">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
-  <title>PLANTILLA | WEB 4</title>
+  <title>TRIBOQUIMIA</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,17 +29,17 @@
                         <span class="icon-bar"></span>
                     </button>
           <div class="navbar-brand">
-            <a href="index.html"><h1>SystemDNS</h1></a>
+            <a href="index.html"><h1>LUBRICANTES Y ESPECIALIDADES</h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation"><a href="index.html" class="active">HOME</a></li>
-              <li role="presentation"><a href="about.html">SERVICIOS Y BENEFICIOS</a></li>
-              <li role="presentation"><a href="services.html">PRODUCTOS</a></li>
-              <li role="presentation"><a href="gallery.html">CONTACTO</a></li>
-              <li role="presentation"><a href="contact.html">UBICACION</a></li>
+<li role="presentation"><a href="index.html" class="active">HOME</a></li>
+<li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
+<li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
+<li role="presentation"><a href="contacto.html">CONTACTO</a></li>
+<li role="presentation"><a href="ubicacion.html">UBICACION</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="text-center">
         <h2>consectetur adipisicing elit</h2>
-        <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+      <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
           <i class="fa fa-heart-o"></i>
           <h3>Fully Responsive</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
@@ -105,40 +105,34 @@
   <footer>
     <div class="container">
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-        <h4>About Us</h4>
-        <p>SystemDNS is tellus ac cursus commodo, mauesris condime ntum nibh, ut fermentum mas justo sitters.</p>
+        <h4>Acerca de Nosotros</h4>
+        
         <div class="contact-info">
           <ul>
-            <li><i class="fa fa-home fa"></i>Suite 54 Elizebth Street, Victoria State Newyork, USA </li>
-            <li><i class="fa fa-phone fa"></i> +38 000 129900</li>
-            <li><i class="fa fa-envelope fa"></i> info@domain.net</li>
+            <li><i class="fa fa-home fa"></i>Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
+            <li><i class="fa fa-phone fa"></i>01 55 5884 9102</li>
+            <li><i class="fa fa-envelope fa"></i>triboquimia@gmail.com</li>
           </ul>
         </div>
       </div>
 
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="text-center">
-          <h4>Photo Gallery</h4>
+          <h4>Galeria de fotos</h4>
           <ul class="sidebar-gallery">
-            <li><a href="#"><img src="img/gallery1.png" alt="" /></a></li>
-            <li><a href="#"><img src="img/gallery2.png" alt="" /></a></li>
-            <li><a href="#"><img src="img/gallery3.png" alt="" /></a></li>
-            <li><a href="#"><img src="img/gallery4.png" alt="" /></a></li>
-            <li><a href="#"><img src="img/gallery5.png" alt="" /></a></li>
-            <li><a href="#"><img src="img/gallery6.png" alt="" /></a></li>
+            <li><a href="img/imgmedia/imagen11.png"><img src="img/imagen1.png" alt="" /></a></li>
+        <li><a href="img/imgmedia/imagen12.png"><img src="img/imagen2.png" alt="" /></a></li>
+        <li><a href="img/imgmedia/imagen13.png"><img src="img/imagen3.png" alt="" /></a></li>
+        <li><a href="img/imgmedia/imagen14.png"><img src="img/imagen4.png" alt="" /></a></li>
+        <li><a href="img/imgmedia/imagen15.png"><img src="img/imagen5.png" alt="" /></a></li>
+        <li><a href="img/imgmedia/imagen16.png"><img src="img/imagen6.png" alt="" /></a></li>
           </ul>
         </div>
       </div>
 
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-        <h4>Newsletter Registration</h4>
-        <p>Subscribe toSystemDNS to receive the latest SystemDNS news via email. You may unsubscribe from this service at any time</p>
-        <div class="btn-gamp">
-          <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
-        </div>
-        <div class="btn-gamp">
-          <a type="submit" class="btn btn-default">Subscribe</a>
-        </div>
+        <h4>!Nuestro Mundo Contiene Todo¡</h4>
+        <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
     </div>
   </footer>
@@ -148,11 +142,10 @@
       <div class="social-icon">
         <div class="col-md-4">
           <ul class="social-network">
-            <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+            <li><a href="https://www.facebook.com/triboquimia.lubricantes.1" target="_blank" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/Triboquimia1" target="_blank" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://plus.google.com/114753530410249625770" target="_blank" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCrU9je7TZ93Sp7HbHpKdjNA?view_as=subscriber" target="_blank" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
           </ul>
         </div>
       </div>
@@ -161,7 +154,7 @@
         <div class="copyright">
           &copy; SystemDNS Theme. All Rights Reserved.
           <div class="credits">
-
+            
             <a href="http://www.servitecflhuaraz.com/">SystemDNS Themes</a> by <a href="http://www.servitecflhuaraz.com/">SystemDNS</a>
           </div>
         </div>
