--- a/webactual/ubicacion.html
+++ b/webactual/ubicacion.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" href="img/favicon.ico">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
-  <title>PLANTILLA | WEB 4</title>
+  <title>TRIBOQUIMIA</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/animate.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
-
+ 
 </head>
 
 <body>
@@ -29,17 +29,17 @@
                         <span class="icon-bar"></span>
                     </button>
           <div class="navbar-brand">
-            <a href="index.html"><h1>SystemDNS</h1></a>
+            <a href="index.html"><h1>LUBRICANTES Y ESPECIALIDADES</h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation"><a href="index.html" class="active">HOME</a></li>
-              <li role="presentation"><a href="about.html">SERVICIOS Y BENEFICIOS</a></li>
-              <li role="presentation"><a href="services.html">PRODUCTOS</a></li>
-              <li role="presentation"><a href="gallery.html">CONTACTO</a></li>
-              <li role="presentation"><a href="contact.html">UBICACION</a></li>
+<li role="presentation"><a href="index.html" class="active">HOME</a></li>
+<li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
+<li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
+<li role="presentation"><a href="contacto.html">CONTACTO</a></li>
+<li role="presentation"><a href="ubicacion.html">UBICACION</a></li>
             </ul>
           </div>
         </div>
@@ -151,7 +151,7 @@
         <div class="copyright">
           &copy; SystemDNS Theme. All Rights Reserved.
           <div class="credits">
-
+           
             <a href="http://www.servitecflhuaraz.com/">SystemDNS Themes</a> by <a href="http://www.servitecflhuaraz.com//">SystemDNS</a>
           </div>
         </div>
