--- a/webactual/index.html
+++ b/webactual/index.html
@@ -225,17 +225,17 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15"><strong>TRIBOQUIMIA</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <strong>EAST MEXICAN LUBRICANTS<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; COMPANY S.A. DE C.V.</strong></h2>
+            <h3 class="service-title pad-bt15"><strong>TRIBOQUIMIA</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <strong>EAST MEXICAN LUBRICANTS<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; COMPANY S.A. DE C.V.</strong></h3>
             <hr class="bottom-line">
           </div>
 
 
           <div class="col-sm-4 col-sm-4 col-xs-12">
             <div class="service-item">
-              <p align="justify">Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
+              <p text-align : justify;>Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
               <img src="img/img2.jpg"><br>
-              Desde hace mas de 20   años relativamente joven, nuestra empresa esta formada por personal técnico   capacitado en el extranjero, que suma muchos años de experiencia.
+              Desde hace mas de 20 años relativamente joven, nuestra empresa esta formada por personal técnico capacitado en el extranjero, que suma muchos años de experiencia.
               </p>
               <div class="col-sm-3 col-sm-6 col-xs-12">
               
@@ -245,7 +245,7 @@
 
             <div class="col-sm-4 col-sm-4 col-xs-4">
             <div class="service-item"> 
-              <p align="justify">Dedica la   mayor parte de su tiempo a la fabricación de lubricantes y grasas a partir de   cualquier base sintética en el mercado. Un 90% de la producción ha sido   desarrollado como substituto de lubricantes de importación.<br>
+              <p align="justify">Dedica la mayor parte de su tiempo a la fabricación de lubricantes y grasas a partir de   cualquier base sintética en el mercado. Un 90% de la producción ha sido   desarrollado como substituto de lubricantes de importación.<br>
               Hoy gracias a los avances de la tribología, <strong>TRIBOQUIMIA</strong> ha logrado mantenerse a la par con las compañías   extranjeras en cuanto a la reducción de la fricción y el desgaste. Los sectores de investigación/desarrollo y aseguramiento de calidad han puesto a punto después de 2 años de pruebas en campo el <strong>FORTIFICADOR FZ</strong>, el cual forma parte de la llamada tercera generación de lubricantes.<br> 
               Todos nuestros lubricantes y grasas tienen incorporado este aditivo, con lo cual nuestros productos se alejan mas de los lubricantes convencionales que funcionan, formando capas blandas de metal u óxidos que impiden un contacto directo de los elementos friccionantes. No obstante, dichas   capas se van desgastando debido a la solicitud mecánica, por lo que deben ser restituidas, con frecuencia. De ahí que la desventaja de esta tecnología resida en el gran consumo de material y aditivos (primera generación de lubricantes).
             </p>
@@ -278,9 +278,9 @@
 
         <div class="contact-info">
           <ul>
-          <li><i class="fa fa-home fa"></i>Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
-          <li><i class="fa fa-phone fa"></i> 01 55 5884 9102</li>
-            <li><i class="fa fa-envelope fa"></i> triboquimia@gmail.com</li>
+          <li><i class="fa fa-home fa"></i>&nbsp;Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
+          <li><i class="fa fa-phone fa"></i>&nbsp;01 55 5884 9102</li>
+            <li><i class="fa fa-envelope fa"></i>&nbsp;triboquimia@gmail.com</li>
           </ul>
         </div>
       </div>
@@ -300,14 +300,16 @@
       </div>
 
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-        <div class="">
+        <div>
       <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
-      <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+      <iframe width="400" height="315" 
+      src="https://www.youtube.com/embed/_7FvdNJTqoc" 
+      frameborder="0" allow="autoplay; encrypted-media" 
+      allowfullscreen></iframe>
         </div>
       </div>
-
     </div>
+
   </footer>
 
   <div class="sub-footer">
