--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -309,26 +309,37 @@
 
       </div>
   </footer>
-
-  <div class="sub-footer">
+  <div class="sub-footer ">
     <div class="container">
       <div class="social-icon">
         <div class="col-md-4">
-          <ul class="social-network">
-            <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+          <ul class="social-network style:center;">
+<div class="col-sm-4" class="container">
+
+
+            <li ><a href="https://www.facebook.com/triboquimia.lubricantes.1" ></i>Pastas termicas </a></li></div>
+
+
+
+            <div class="col-sm-6" class="container">
+
+
+            <li class="col-sm-4"><a href="https://twitter.com/Triboquimia1" ><i></i>Grasas lubricantes</a></li></div>
+
+            <li><a href="https://plus.google.com/114753530410249625770" ><i ></i>Fluidos</a></li>
+            <li ><a href="https://www.youtube.com/channel/UCrU9je7TZ93Sp7HbHpKdjNA?view_as=subscriber" ><i></i>cortes y fluidos</a></li>
           </ul>
         </div>
       </div>
+      </div>
+
+
 
       <div class="col-md-4 col-md-offset-4">
         <div class="copyright">
           &copy; SystemDNS Theme. All Rights Reserved.
           <div class="credits">
-          
+
             <a href="http://www.servitecflhuaraz.com/">SystemDNS</a> by <a href="http://www.servitecflhuaraz.com/">SystemDNS</a>
           </div>
         </div>
