--- a/webactual/index.html
+++ b/webactual/index.html
@@ -231,6 +231,7 @@
           </div>
 
 
+
           <div class="col-sm-4 col-sm-4 col-xs-4">
             <div class="service-item">
               <p text-align : justify;>Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
@@ -289,10 +290,18 @@
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
           <ul class="sidebar-gallery">
-        <li><a href="img/imgmedia/imagen11.png"><img src="img/imagen1.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen12.png"><img src="img/imagen2.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen13.png"><img src="img/imagen3.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen14.png"><img src="img/imagen4.png" alt="" /></a></li>
+            <button "button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+
+            </button>
+
+
+        <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><img id="imgm"src="./img/imgmedia/imagen11.png" alt=""></button> </li>
+
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"><img id="imgm"src="./img/imgmedia/imagen13.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3"><img id="imgm"src="./img/imgmedia/imagen14.png" alt=""></button> </li>
+
+        
         <li><a href="img/imgmedia/imagen15.png"><img src="img/imagen5.png" alt="" /></a></li>
         <li><a href="img/imgmedia/imagen16.png"><img src="img/imagen6.png" alt="" /></a></li>
         </ul>
@@ -337,6 +346,48 @@
     </div>
   </div>
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <img src="./img/imgmedia/imagen11.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <img src="./img/imgmedia/imagen12.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <img src="./img/imgmedia/imagen13.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+
+        <img src="./img/imgmedia/imagen14.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
