arelgo de galeria de imagene
 se  hizo     la ventana  modal      en  el foot er
 y cambio de estilo de servicios y veneficios

--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -285,20 +285,23 @@
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
           <ul class="sidebar-gallery">
-        <li><a href="img/imgmedia/imagen11.png"><img src="img/imagen1.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen12.png"><img src="img/imagen2.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen13.png"><img src="img/imagen3.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen14.png"><img src="img/imagen4.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen15.png"><img src="img/imagen5.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen16.png"><img src="img/imagen6.png" alt="" /></a></li>
-          </ul>
+        <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><img id="imgm"src="./img/imgmedia/imagen11.png" alt=""></button> </li>
+
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal11"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"><img id="imgm"src="./img/imgmedia/imagen13.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3"><img id="imgm"src="./img/imgmedia/imagen14.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal14"><img id="imgm"src="./img/imgmedia/imagen15.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal15"><img id="imgm"src="./img/imgmedia/imagen16.png" alt=""></button> </li>
+
+
+        </ul>
         </div>
       </div>
 
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
         <div class="">
           <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
-          <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen"></iframe>
         </div>
       </div>
   </footer>
@@ -328,6 +331,68 @@
         </div>
       </div>
     </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen11.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen12.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen13.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+
+  <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen14.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen16.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen15.png" alt="">
+
+    </div>
+  </div>
+
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
