--- a/webactual/contacto.html
+++ b/webactual/contacto.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/animate.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
-  
+
 </head>
 
 <body>
@@ -120,7 +120,7 @@
     <div class="container">
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
         <h4>Acerca de Nosotros</h4>
-        
+
         <div class="contact-info">
           <ul>
           <li><i class="fa fa-home fa"></i>&nbsp;Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
@@ -129,25 +129,27 @@
           </ul>
         </div>
       </div>
-
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
           <ul class="sidebar-gallery">
-        <li><a href="img/imgmedia/imagen11.png"><img src="img/imagen1.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen12.png"><img src="img/imagen2.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen13.png"><img src="img/imagen3.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen14.png"><img src="img/imagen4.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen15.png"><img src="img/imagen5.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen16.png"><img src="img/imagen6.png" alt="" /></a></li>
-          </ul>
+        <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><img id="imgm"src="./img/imgmedia/imagen11.png" alt=""></button> </li>
+
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal11"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"><img id="imgm"src="./img/imgmedia/imagen13.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3"><img id="imgm"src="./img/imgmedia/imagen14.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal14"><img id="imgm"src="./img/imgmedia/imagen15.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal15"><img id="imgm"src="./img/imgmedia/imagen16.png" alt=""></button> </li>
+
+
+        </ul>
         </div>
       </div>
 
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
         <div class="">
           <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
-          <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen"></iframe>
         </div>
       </div>
   </footer>
@@ -169,13 +171,76 @@
         <div class="copyright">
           &copy; TRIBOQUIMIA. All Rights Reserved.
           <div class="credits">
-          
+
             <a href="http://www.servitecflhuaraz.com/">DevelopmentWeb</a> by <a href="http://www.servitecflhuaraz.com/">ING.CJSG</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
+
+          <img src="./img/imgmedia/imagen11.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
+    <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
+
+          <img src="./img/imgmedia/imagen12.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
+
+          <img src="./img/imgmedia/imagen13.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
+
+    <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
+
+          <img src="./img/imgmedia/imagen14.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
+    <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
+
+          <img src="./img/imgmedia/imagen16.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
+    <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
+
+          <img src="./img/imgmedia/imagen15.png" alt="">
+
+      </div>
+    </div>
+
+    </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
