--- a/webactual/index.html
+++ b/webactual/index.html
@@ -290,20 +290,15 @@
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
           <ul class="sidebar-gallery">
-            <button "button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-
-            </button>
-
-
         <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><img id="imgm"src="./img/imgmedia/imagen11.png" alt=""></button> </li>
 
-                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal11"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
                 <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"><img id="imgm"src="./img/imgmedia/imagen13.png" alt=""></button> </li>
                 <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3"><img id="imgm"src="./img/imgmedia/imagen14.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal14"><img id="imgm"src="./img/imgmedia/imagen15.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal15"><img id="imgm"src="./img/imgmedia/imagen16.png" alt=""></button> </li>
 
-        
-        <li><a href="img/imgmedia/imagen15.png"><img src="img/imagen5.png" alt="" /></a></li>
-        <li><a href="img/imgmedia/imagen16.png"><img src="img/imagen6.png" alt="" /></a></li>
+
         </ul>
         </div>
       </div>
@@ -350,7 +345,7 @@
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content" style="width:50%;">
 
         <img src="./img/imgmedia/imagen11.png" alt="">
 
@@ -358,9 +353,9 @@
   </div>
 
   </div>
-  <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content" style="width:50%;">
 
         <img src="./img/imgmedia/imagen12.png" alt="">
 
@@ -370,7 +365,7 @@
   </div>
   <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content"style="width:50%;">
 
         <img src="./img/imgmedia/imagen13.png" alt="">
 
@@ -378,11 +373,32 @@
   </div>
 
   </div>
+
   <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content"style="width:50%;">
 
         <img src="./img/imgmedia/imagen14.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen16.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen15.png" alt="">
 
     </div>
   </div>
