--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -53,18 +53,20 @@
   <div class="about">
     <div class="container">
       <div class="text-center">
-        <h2>hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h2>
+        <h2><samp class="glyphicon glyphicon-folder-close
+"></samp>PRODUCTOS</h2>
 
-        <div class="col-md-10 col-md-offset-1">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat quod voluptate consequuntur ad quasi, dolores obcaecati ex aliquid, dolor provident accusamus omnis dolorum ipsam. Voluptatem ipsum expedita, corporis facilis laborum asperiores
-            nostrum! Amet porro numquam ratione temporibus quia dolorem sint lorem voluptates quasi mollitia.</p>
+          <p >TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.
+
+Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias
+
+
+
+Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas, Industria del azúcar y Lubricantes ecológicos.</p>
+
         </div>
 
-        <div class="col-md-6 col-sm-6 col-xs-6">
-          <div class="btn-gamp"><a href="#">Learn More</a></div>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-6">
-          <div class="gamp-btn"><a href="#">download</a></div>
+
         </div>
 
       </div>
@@ -75,17 +77,14 @@
   <section id="about-us">
     <div class="container">
       <div class="text-center wow fadeInDown">
-        <h2>Skills</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+
+
+
+
       </div>
       <div class="skill-wrap clearfix">
         <div class="row">
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="joomla-skill">
-                <p><em>85%</em></p>
-                <p>Joomla</p>
-              </div>
+         <li> <a href="#"><i class="fa fa-xing-square"></i></a></li>
             </div>
           </div>
 
@@ -151,9 +150,11 @@
               </div>
               <!--/.media -->
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             </div>
           </div>
           <!--/.col-lg-4 -->
+
 
 
           <div class="col-md-4 col-sm-6 col-md-offset-2">
