--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/animate.min.css" rel="stylesheet">
+  <link href="css/style1.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -50,223 +51,78 @@
   </header>
   <!--/header-->
 
-  <div class="about">
+  <div class="gallery">
+    <div class="text-center">
+      <h2>PRODUCTOS</h2>
+      <p>TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.
+Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias:
+
+Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas, Industria del azúcar y Lubricantes ecológicos.
+
+ </p>
+    </div>
     <div class="container">
-      <div class="text-center">
-        <h2><samp class="glyphicon glyphicon-folder-close
-"></samp>PRODUCTOS</h2>
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/imgmetal.jpg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4 class="text-center">Pastas Metalicas</h4>
+            <p>La lubricación bajo condiciones extremas
 
-          <p >TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.
+</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/ojana.jpg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4 class="text-center">Grasas Lubricantes</h4>
+            <p>Marley tried to convince her but she was not interested.</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/fluidos-1.jpg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4 class="text-center">Fluidos</h4>
+            <p>Marley tried to convince her but she was not interested.</p>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
 
-Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias
-
-
-
-Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas, Industria del azúcar y Lubricantes ecológicos.</p>
-
-        </div>
-
-
-        </div>
-
+    <div class="container">
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/dua.jpeg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4 class="text-center">Aceite de corte </h4>
+            <p>Marley tried to convince her but she was not interested.</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/12.jpg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4 class="text-center">Lubricantes en Aeorosol</h4>
+            <p>Marley tried to convince her but she was not interested.</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-3">
+        <figure class="effect-marley">
+          <img src="img/13.jpg" alt="" class="img-responsive" />
+          <figcaption>
+            <h4>sweet marley</h4>
+            <p>Marley tried to convince her but she was not interested.</p>
+          </figcaption>
+        </figure>
       </div>
     </div>
   </div>
-  <hr>
-
-  <section id="about-us">
-    <div class="container">
-      <div class="text-center wow fadeInDown">
-
-
-
-
-      </div>
-      <div class="skill-wrap clearfix">
-        <div class="row">
-         <li> <a href="#"><i class="fa fa-xing-square"></i></a></li>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="html-skill">
-                <p><em>95%</em></p>
-                <p>HTML</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-              <div class="css-skill">
-                <p><em>80%</em></p>
-                <p>CSS</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-              <div class="wp-skill">
-                <p><em>90%</em></p>
-                <p>Wordpress</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- our-team -->
-      <div class="team">
-        <div class="text-center wow fadeInDown">
-          <h2>Team of SystemDNS</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-
-        <div class="row clearfix">
-          <div class="col-md-4 col-sm-6">
-            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man1.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-            </div>
-          </div>
-          <!--/.col-lg-4 -->
-
-
-
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man2.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-          <!--/.col-lg-4 -->
-        </div>
-        <!--/.row -->
-        <div class="row team-bar">
-          <div class="first-one-arrow hidden-xs">
-            <hr>
-          </div>
-          <div class="first-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-up"></i>
-          </div>
-          <div class="second-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-down"></i>
-          </div>
-          <div class="third-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-up"></i>
-          </div>
-          <div class="fourth-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-down"></i>
-          </div>
-        </div>
-        <!--skill_border-->
-
-        <div class="row clearfix">
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man3.jpg" alt=""></a>
-                </div>
-
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man4.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-        </div>
-        <!--/.row-->
-      </div>
-      <!--section-->
-    </div>
-    <!--/.container-->
-  </section>
-  <!--/about-us-->
 
   <footer>
     <div class="container">
@@ -281,7 +137,6 @@ Industria textil, Industria del acero, Industria alimenticia, Industria del vidr
           </ul>
         </div>
       </div>
-
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
@@ -306,7 +161,8 @@ Industria textil, Industria del acero, Industria alimenticia, Industria del vidr
         </div>
       </div>
   </footer>
-  <div class="sub-footer ">
+
+  <div class="sub-footer">
     <div class="container">
       <div class="social-icon">
         <div class="col-md-4">
@@ -318,9 +174,6 @@ Industria textil, Industria del acero, Industria alimenticia, Industria del vidr
           </ul>
         </div>
       </div>
-      </div>
-
-
 
       <div class="col-md-4 col-md-offset-4">
         <div class="copyright">
@@ -333,68 +186,69 @@ Industria textil, Industria del acero, Industria alimenticia, Industria del vidr
       </div>
     </div>
   </div>
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content" style="width:50%;">
 
-        <img src="./img/imgmedia/imagen11.png" alt="">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
+
+          <img src="./img/imgmedia/imagen11.png" alt="">
+
+      </div>
+    </div>
 
     </div>
-  </div>
+    <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
 
-  </div>
-  <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content" style="width:50%;">
+          <img src="./img/imgmedia/imagen12.png" alt="">
 
-        <img src="./img/imgmedia/imagen12.png" alt="">
+      </div>
+    </div>
 
     </div>
-  </div>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
 
-  </div>
-  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content"style="width:50%;">
+          <img src="./img/imgmedia/imagen13.png" alt="">
 
-        <img src="./img/imgmedia/imagen13.png" alt="">
+      </div>
+    </div>
 
     </div>
-  </div>
 
-  </div>
+    <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
 
-  <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content"style="width:50%;">
+          <img src="./img/imgmedia/imagen14.png" alt="">
 
-        <img src="./img/imgmedia/imagen14.png" alt="">
+      </div>
+    </div>
 
     </div>
-  </div>
+    <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="width:50%;">
 
-  </div>
-  <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content" style="width:50%;">
+          <img src="./img/imgmedia/imagen16.png" alt="">
 
-        <img src="./img/imgmedia/imagen16.png" alt="">
+      </div>
+    </div>
 
     </div>
-  </div>
+    <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content"style="width:50%;">
 
-  </div>
-  <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content"style="width:50%;">
+          <img src="./img/imgmedia/imagen15.png" alt="">
 
-        <img src="./img/imgmedia/imagen15.png" alt="">
+      </div>
+    </div>
 
     </div>
-  </div>
-
-  </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
