--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -105,22 +105,14 @@ Industria textil, Industria del acero, Industria alimenticia, Industria del vidr
       </div>
       <div class="col-md-3">
         <figure class="effect-marley">
-          <img src="img/12.jpg" alt="" class="img-responsive" />
+          <img src="img/aerosol.jpg" alt="" class="img-responsive" />
           <figcaption>
             <h4 class="text-center">Lubricantes en Aeorosol</h4>
             <p>Marley tried to convince her but she was not interested.</p>
           </figcaption>
         </figure>
       </div>
-      <div class="col-md-3">
-        <figure class="effect-marley">
-          <img src="img/13.jpg" alt="" class="img-responsive" />
-          <figcaption>
-            <h4>sweet marley</h4>
-            <p>Marley tried to convince her but she was not interested.</p>
-          </figcaption>
-        </figure>
-      </div>
+
     </div>
   </div>
 
