creacio de paginas de fotter
falta agregarle contenido        a los las paginas nuevas

--- a/webactual/PastasMetalicas.html
+++ b/webactual/PastasMetalicas.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/animate.min.css" rel="stylesheet">
-  <link href="css/style1.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -50,82 +49,70 @@
     <!--/nav-->
   </header>
   <!--/header-->
-
-  <div class="gallery">
-    <div class="text-center">
-      <h2>PRODUCTOS</h2>
-      <p>TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.
-Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias:
-
-Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas, Industria del azúcar y Lubricantes ecológicos.
-
- </p>
-    </div>
-    <div class="col">
+<div class="row">
 
 
+  <div class="services">
     <div class="container">
-      <div class="col-xs-4">
-        <figure class="effect-marley"><a href="./PastasMetalicas.html">
-          <img src="img/imgmetal.jpg" alt="" class="img-responsive" />
-          <figcaption> <a href="./PastasMetalicas.html">
-            <h4 class="text-center">Pastas Metalicas</h4>
-            <p>La lubricación bajo condiciones extremas
+      <div class="text-center">
+        <h2><strong>SERVICIOS Y BENEFICIOS</strong></h2>
 
-</p> </a>
-          </figcaption>
-        </figure>
-      </div>
-      <div class="col-xs-3">
-        <figure class="effect-marley"><a href="./PastasMetalicas.html">
-        <figure class="effect-marley">
-          <img src="img/ojana.jpg" alt="" class="img-responsive" />
-          <figcaption>
-            <h4 class="text-center">Grasas Lubricantes</h4>
-            <p> es un material semifluido formado por un agente espesante, un aceite base </p></a>
-          </figcaption>
-        </figure>
-      </div>
-      <div class="col-xs-4">
-        <figure class="effect-marley"><a href="./Fluidos.html">
-          <img src="img/fluidos-1.jpg" alt="" class="img-responsive" />
-          <figcaption>
-            <h4 class="text-center">Fluidos</h4>
-            <p>
+      <div class="col wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 
-FLUIDOS  LUBRICANTES PARA
-</p></a>
-          </figcaption>
-        </figure>
+          <h3>Algunas compañías venden lubricantes, <strong>TRIBOQUIMIA</strong> vende tiempo efectivo de producción.<h3>
+          <p class="bg-info">Usted puede aprender de los especialistas en tribología y   técnicos de aplicación, la utilización correcta de los lubricantes. Esta   inversión merece la pena y le ofrece a usted mas seguridad en la compra, en el   mantenimiento, en la planificación y en las nuevas instalaciones. Nuestro empeño   es hacerle participe de nuestros conocimientos y de nuestra experiencia.<br>
+          Sabemos que el objetivo de nuestros clientes es rentabilizar al   máximo sus inversiones, tanto en el capitulo de bienes de equipo, como en sus   esfuerzos organizativos por cumplir con los servicios que a su vez, han de dar a   sus clientes.
+          </p>
+        </div>
+        </div>
+        <div  class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms"></div>
+
+          <div class="w-100"></div>
+        <div class="row">
+
+
+        <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+          <h3>Los beneficios que usted obtiene cuando adquiere nuestros lubricantes son:</h3>
+          <p class="bg-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+        </div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="col-xs-4">
-        <figure class="effect-marley"><a href="./AceitedeCorte.html">
-          <img src="img/dua.jpeg" alt="" class="img-responsive" />
-          <figcaption>
-            <h4 class="text-center">Aceite de corte </h4>
-            <p>Triboquimia posee una amplia gama de productos aplicables a  la industria metalmecánica: </p></a>
-          </figcaption>
-        </figure>
-      </div>
-      
-      <div  class="col-sm-4">
-
-
-        <figure class="effect-marley"><a href="./LubricantesenAeorosol.html">
-          <img src="img/aerosol.jpg" alt="" class="img-responsive" />
-          <figcaption>
-            <h4 class="text-center">Lubricantes en Aeorosol</h4>
-            <p>Hay dispositivos mecánicos los cuales deben ser lubricados</p>
-          </figcaption>
-        </figure>
-      </div>
-
     </div>
-  </div>
+
+
+
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <footer>
     <div class="container">
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -134,11 +121,12 @@ FLUIDOS  LUBRICANTES PARA
         <div class="contact-info">
           <ul>
           <li><i class="fa fa-home fa"></i>&nbsp;Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
-          <li><i class="fa fa-phone fa"></i>&nbsp;&nbsp;01 55 5884 9102</li>
+          <li><i class="fa fa-phone fa"></i>&nbsp;01 55 5884 9102</li>
             <li><i class="fa fa-envelope fa"></i>&nbsp;triboquimia@gmail.com</li>
           </ul>
         </div>
       </div>
+
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
         <div class="text-center">
           <h4>Galeria de Fotos</h4>
@@ -155,13 +143,11 @@ FLUIDOS  LUBRICANTES PARA
         </ul>
         </div>
       </div>
-
       <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-        <div class="">
-          <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
-          <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen"></iframe>
-        </div>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
+        <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen"></iframe>
       </div>
+    </div>
   </footer>
 
   <div class="sub-footer">
@@ -188,69 +174,69 @@ FLUIDOS  LUBRICANTES PARA
       </div>
     </div>
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content" style="width:50%;">
-
-          <img src="./img/imgmedia/imagen11.png" alt="">
-
-      </div>
-    </div>
+        <img src="./img/imgmedia/imagen11.png" alt="">
 
     </div>
-    <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content" style="width:50%;">
+  </div>
 
-          <img src="./img/imgmedia/imagen12.png" alt="">
+  </div>
+  <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
 
-      </div>
-    </div>
-
-    </div>
-    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content"style="width:50%;">
-
-          <img src="./img/imgmedia/imagen13.png" alt="">
-
-      </div>
-    </div>
+        <img src="./img/imgmedia/imagen12.png" alt="">
 
     </div>
+  </div>
 
-    <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content"style="width:50%;">
+  </div>
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
 
-          <img src="./img/imgmedia/imagen14.png" alt="">
-
-      </div>
-    </div>
-
-    </div>
-    <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content" style="width:50%;">
-
-          <img src="./img/imgmedia/imagen16.png" alt="">
-
-      </div>
-    </div>
+        <img src="./img/imgmedia/imagen13.png" alt="">
 
     </div>
-    <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content"style="width:50%;">
+  </div>
 
-          <img src="./img/imgmedia/imagen15.png" alt="">
+  </div>
 
-      </div>
+  <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen14.png" alt="">
+
     </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen16.png" alt="">
 
     </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen15.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
